--- a/less/bootswatch/imports/forms.less
+++ b/less/bootswatch/imports/forms.less
@@ -136,14 +136,16 @@ Styleguide 2.4
 
 .static-text-field-label {
   display: block;
-  font-weight: bold;
+  font-weight: 600;
+  height: 25px;
 }
 
 .static-text-field {
   display: block;
   font-weight: 100;
   line-height: @line-height-base;
-  padding: 12px;
+  padding-top: 6px;
+  padding-bottom: 12px;
 }
 
 // todo: add form-control error to styleguide?
